# google-tasks-desktop

./: Certificates.p12  LICENSE  README.md  bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: main.yml
src/: App.svelte  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: GoogleTasks.icns  googletaskslogo.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte  styles.css
