[package]
name = "google-tasks-desktop"
version = "0.1.3"
description = "A Tauri App"
authors = ["Shouryan Nikam"]
license = "MIT"
repository = "https://github.com/shouryan01/google-tasks-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
