[package]
name = "google-tasks-desktop"
version = "0.1.4"
description = "A Tauri App"
authors = ["Shouryan Nikam"]
license = "MIT"
repository = "https://github.com/shouryan01/google-tasks-desktop"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-shell = "2"

[features]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
